--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "author": "J Jordan <jjrdn@styosis.com>",
   "name": "open",
   "description": "open a file or url in the user's preferred application",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "repository": {
     "type": "git",
     "url": "git://github.com/jjrdn/node-open.git"
   },
+  "contributors" : [
+    "Larry Battle (https://github.com/LarryBattle/)"
+  ],
   "homepage": "https://github.com/jjrdn/node-open",
   "bugs": "https://github.com/jjrdn/node-open/issues",
   "main": "lib/open.js",
